--- a/03-3.November/content/auswertung.tex
+++ b/03-3.November/content/auswertung.tex
@@ -97,7 +97,7 @@ Daraus ergibt sich eine Winkelrichtgröße von
 \end{align}
 Das Trägheitsmoment der Drillachse errechnet sich aus dem vergleich zwischen dem errechnetem Wert der Regression und der gemessenen Werte.
 \begin{align}
-	b = \frac{4 \pi^2 I_\text{D}}{D} + \frac{8\pi^2 m_\text{G}}{D} \left( \frac{R^2}{4} + \frac{h^2}{12} \right) = 5.48
+	b = \frac{4 \pi^2 I_\text{D}}{D} + \frac{8\pi^2 m_\text{G}}{D} \left( \frac{R^2}{4} + \frac{h^2}{12} \right) = \num{5.48 +- 0.49}
 \end{align}
 Nach Umstellen der Formel nach $I_\text{D}$, beträgt das Trägheitsmoment der Drillachse
 \begin{align*}
@@ -123,7 +123,7 @@ Bei einer Masse von
 \end{align*}
 beträgt das theoretische Trägheitsmoment der Kugel
 \begin{align}
-	I_\text{K,theo} = 1.53 \, \text{kg m}^2 \ .
+	I_\text{K,theo} = \num{1.53 +- 0.00} \, \text{kg m}^2 \ .
 \end{align}
 Das experimentell ermittelte Trägheitsmoment errechnet sich durch Umformung der Formel \ref{eqn:Schwingungsdauer} und ergibt nach Mittelung der Periodendauer
 \begin{equation}
@@ -142,7 +142,7 @@ berechnet. Durch Einsetzen des Radius von
 \end{align*}
 ergibt sich ein Trägheitsmoment von
 \begin{align}
-	I_\text{Z,theo} = 1.58 \cdot 10^{-3} \, \text{kg m}^2 \ .
+	I_\text{Z,theo} = \num{1.58 +- 0.00} \cdot 10^{-3} \, \text{kg m}^2 \ .
 \end{align}
 Das experimentelle Trägheitsmoment berechnet sich analog zur Kugel (siehe Formel \ref{eqn:T_K}) und beträgt
 \begin{align}
