--- a/04-10.November/content/durchfuehrung.tex
+++ b/04-10.November/content/durchfuehrung.tex
@@ -6,8 +6,7 @@ Zentrales Element des Versuchaufbaus ist ein Peltier Element womit vier verschie
 \begin{figure}[ht]
 	\centering
 	\includegraphics[height=5cm]{./Aufbau.png}
-	\caption{Versuchsaufbau muss noch zitiert werden \cite{Aufbau}
-}
+	\caption{Experimenteller Aufbau zur Bestimmung der Wärmeleitfähigkeit \cite{Aufbau}.}
 	\label{fig:Aufbau}
 \end{figure}
 
@@ -18,7 +17,7 @@ Die Funktionsweise eines Peltier Elements beruht auf dem Seebeck-Effekt bzw. Pel
 
 
 \subsection{Statische Methode}
-Hierbei werden die vier Stäbe durch das Peltier Element solange geheizt bis das siebte Thermoelement (siehe Abbildung \ref{fig:Aufbau}) eine Temperatur von $45^\circ$ Celsius misst. Das Peltier Element wird mit einer Eingangsspannung von 7 Volt betrieben bei maximaler Stromstärke. Die Temperatur der einzelnen Thermomelemente wird jede fünf Sekunden mittels des GLX Xplorers ausgelesen. Auf diesem werden die Temperaturverläufe T1 und T4 sowie T5 und T8 graphisch gegeinander aufgetragen. Zusätzlich wird eine Temperaturmessung nach 700 Sekunden an dem ersten, vierten, fünften und achten Thermoelement durchgeführt um die beste Wärmeleitung der Stäbe zu bestimmen. Außerdem sollen die Temperaturdifferenzen T2-T1 und T7-T8 graphisch Dargestellt werden.
+Hierbei werden die vier Stäbe durch das Peltier Element solange geheizt bis das siebte Thermoelement (siehe Abbildung \ref{fig:Aufbau}) eine Temperatur von $45^\circ$ Celsius misst. Das Peltier Element wird mit einer Eingangsspannung von 7 Volt betrieben bei maximaler Stromstärke. Die Temperatur der einzelnen Thermomelemente wird jede fünf Sekunden mittels des GLX Xplorers ausgelesen. Auf diesem werden die Temperaturverläufe T1 und T4 sowie T5 und T8 graphisch gegeinander aufgetragen. Zusätzlich wird eine Temperaturmessung nach 700 Sekunden an dem ersten, vierten, fünften und achten Thermoelement durchgeführt um die beste Wärmeleitung der Stäbe zu bestimmen. Außerdem sollen die Temperaturdifferenzen T2-T1 und T7-T8 graphisch dargestellt werden.
 
 \subsection{Dynamische Methode}
 Mittels des Angström-Messverfahren wird der Stab nun periodisch geheizt, so dass eine Temperaturwelle entsteht. Durch die Phasengeschwindigkeit der Welle lässt sich die Wärmeleitfähigkeit bestimmen. \ \\
