--- a/04-10.November/content/theorie.tex
+++ b/04-10.November/content/theorie.tex
@@ -1,15 +1,15 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Im folgenden Versuch soll die Wärmeleitfähigkeit verschiedener Stoffe bestimmt werden. Zur Wärmeleitung kommt es wenn ein Temperaturgefälle ($\partial T / \partial x$) auf dem Stab exsistiert. Dabei wird durch einen Querschnittsfläche $A$, in der Zeit $dt$ die Wärmemenge $dQ$ transportiert.
+Im folgenden Versuch soll die Wärmeleitfähigkeit verschiedener Stoffe bestimmt werden. Zur Wärmeleitung kommt es wenn ein Temperaturgefälle ($\partial T / \partial x$) auf dem Stab existiert. Dabei wird durch einem Querschnittsfläche $A$, in der Zeit $dt$ die Wärmemenge $dQ$ transportiert.
 \begin{equation}
 	\label{eqn:Q/t}
 	dQ = - \kappa A \frac{\partial T}{\partial x} dt
 \end{equation}
-$\kappa$ ist eine materialäbhängige Konstante und dient als Proportionalitätsfaktor. In Analogie zur Elektrodynamik definiert man sich eine Wärmestromdichte 
+$\kappa$ ist eine materialäbhängige Konstante, names Wärmeleitfähigkeit und und dient als Proportionalitätsfaktor. In Analogie zur Elektrodynamik wird eine Wärmestromdichte 
 \begin{equation}
 	j_w = - \kappa \frac{\partial T}{\partial x}
 \end{equation}
-die den Verschiebungsstrom zwischen den Temperaturdifferenzen wiedergibt. Damit lässt sich eine Kontinuitätsgleichung formulieren
+die den Verschiebungsstrom zwischen den Temperaturdifferenzen wiedergibt definiert. Damit lässt sich eine Kontinuitätsgleichung formulieren
 \begin{equation}
 	\label{eqn:KG}
 	\frac{\partial T}{\partial t} = \frac{\kappa}{\rho c} \frac{\partial^2 T}{\partial x^2} \ ,
@@ -22,7 +22,7 @@ ablesen. Dies ist ein Maß dafür wie schnell sich Temperaturunterschiede ausgle
 \begin{equation}
 	T(x,t) = T_{max}e^{-\sqrt{\frac{\omega \rho c}{2 \kappa}}x}cos \left( \omega t - \sqrt{ \frac{\omega \rho c}{2 \kappa}}x \right) \ .
 \end{equation}
-Durch ablesen der Koeffizienten der Wellengeleichung und dem Zusammenhang das die Phasengeschwindigkeit gleich der Kreisfrequenz durch die Wellenzahl ist erhält man eine Geschwindikeit von
+Durch Ablesen der Koeffizienten der Wellengeleichung und dem Zusammenhang das die Phasengeschwindigkeit gleich der Kreisfrequenz durch die Wellenzahl ist erhält man eine Geschwindikeit von
 \begin{equation}
 	\label{eqn:v}
 	v = \sqrt{ \frac{2 \kappa \omega}{\rho c}} \ .
