Sach mal was da Falsch ist

--- a/06-24.November/content/auswertung.tex
+++ b/06-24.November/content/auswertung.tex
@@ -1,3 +1,8 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{ThermospannungW.pdf}
+  \caption{ThermospannungW}
+\end{figure}
