schonmal die Graphen

--- a/06-24.November/content/auswertung.tex
+++ b/06-24.November/content/auswertung.tex
@@ -3,6 +3,24 @@
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{ThermospannungW.pdf}
+  \includegraphics[width=\textwidth]{ThermoW.pdf}
   \caption{ThermospannungW}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{ThermoM.pdf}
+  \caption{ThermospannungM}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{ThermoS.pdf}
+  \caption{ThermospannungS}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{ThermoG.pdf}
+  \caption{ThermospannungG}
 \end{figure}
