--- a/06-24.November/content/diskussion.tex
+++ b/06-24.November/content/diskussion.tex
@@ -1,2 +1,7 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Die Standardabweichung der Steigung und der daraus resultierende Fehler für $\epsilon$, lassen sich durch die Ansprechzeit der Thermosäule nach Moll und der ungenauen Temperaturmessung erklären. Außerdem sind große Schwankungen in der Thermospannung zu erkennen wenn Personen an dem Versuchaufbau vorbei laufen.
+\\
+Ein Vergleich mit Literaturwerten ist hier nicht Sinnvoll da wir von der idealisierten Annahme ausgehen, dass die schwarze Oberfläche ein Emissionsvermögen von $\epsilon = 1$ besitzt und alle anderen Werte von diesem abgeleitet werden.
+\\
+Bei der Thermospannung im Verhältnis zum Abstand ist deutlich ein linearer Zusammenhang zwischen $U \propto A$ zu erkennen.
