DA, hoffe es geht

--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -81,7 +81,7 @@ Mittels einer fit Funktion werden die Koeffizienten bestimmt. Für die Temperatu
 \begin{eqnarray*}
   A =& -3.23 \cdot 10^{-6} \, \frac{\text{K}}{\text{s}^2}	\\
   B =& 2.20 \cdot 10^{-2} \, \frac{\text{K}}{\text{s}} 	\\
-  C =& 2.93 \cdot 10^{2} \, \text{K} 
+  C =& 2.93 \cdot 10^{2} \, \text{K}
   \label{eqn:koefT1}
 \end{eqnarray*}
 und für $T_\text{2}$
@@ -219,3 +219,4 @@ Die Leistung wird nach Formel \ref{eqn:ave} gemittelt und der Fehler mit Formel 
 \begin{equation}
   N_{\text{mech}} = ( \num{17 +- 2} ) \, \text{W} \ .
 \end{equation}
+\newpage
