--- a/05-17.November/content/theorie.tex
+++ b/05-17.November/content/theorie.tex
@@ -85,8 +85,11 @@ mit der Dichte $\rho$ und dem Druck $p_\text{a}$.
 
 \subsection{Allgemeiner Aufbau einer Wärmepumpe}
 Im folgenden wird die prinzipielle Funktionsweise einer Wärmepumpe beschrieben. Diese kann schematisch wie folgt dargestellt werden:
-
-% Bild einfügen
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=7cm]{Allgemeine_Waermepumpe.png}
+	\caption{Allgemeiner Aufbau einer Wärmepumpe [1]}
+\end{figure}
 
 Für die Wärmepumpe wird ein reales Gas verwendet, welches Wärme beim Verdampfen aufnimmt und beim Kondensieren wieder abgibt. Die Wärme wird also in Form von Phasenumwandlungsenergie des Gases transportiert. Daraus folgt, dass das verwendete Gas eine hohe Kondensationswärme haben sollte. Der Kompressor $K$ komprimiert das Gas adiabatisch und erzeugt einen Kreislauf des Mediums. Zwischen den Reservoiren ist ein Drosselventil $D$ angebracht, welches das Gas bei einem bestimmten Druck passieren lässt. Dadurch entsteht ein Druckunterschied $p_\text{b} - p_\text{a}$. Das Gas mit dem Druck $p_\text{a}$ und der Temperatur $T_\text{2}$ ist gasförmig, während es auf der anderen Seite bei $p_\text{b}$ mit der Temperatur $T_\text{1}$ flüssig ist. Nachdem das flüssige Medium durch das Druckventil geströmt ist, verdampft dieses im Reservoir 2 und entzieht diesem die Verdampfungswärme $L$ pro Gramm Substanz. Das zweite Reservoir ist damit das kältere und Wärme abgebende Reservoir. In dem Kompressor $K$ wird das Gas komprimiert, wodurch es sich erwärmt. Durch die Erwärmung steigt der Druck $p_\text{a}$ im Reservoir 1, bis sich das Gas verflüssigt, wodurch Wärme an die Umgebung abgegeben wird. \\
 Wichtig ist, dass nur Gase in den Kompressor gelangen. Erreicht wird das mit diesen Apparaten:
@@ -95,6 +98,7 @@ Wichtig ist, dass nur Gase in den Kompressor gelangen. Erreicht wird das mit die
 \item mit der Steuervorrichtung $S$, die das Drosselventil $D$ reguliert
 \end{itemize}
 
+\newpage
 \subsection{Fehlerrechnung}
 Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
 \subsubsection{Mittelwert}
@@ -126,5 +130,4 @@ Die Steigung und y-Achsenabschnitt einer Ausgleichsgeraden werden gegebenfalls m
 \begin{equation}
 	b = \frac{ \overline{x^2}\overline{y} - \overline{x} \, \overline{xy}} { \overline{x^2} - \overline{x}^2}
 \end{equation}
-
-\cite{sample}
+\newpage
