--- a/07-01.Dezember/lit.bib
+++ b/07-01.Dezember/lit.bib
@@ -1,5 +1,5 @@
 @manual{sample,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
+  title = {Versuch 303: Der Lock-In-Verstärker},
   year = 2014
 }
