--- a/07-01.Dezember/main.tex
+++ b/07-01.Dezember/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{303}
+\title{Der Lock-In-Verstärker}
 \date{
-  Durchführung: DATUM
+  Durchführung: 01.12.2015
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 08.12.2012
 }
 
 \begin{document}
