--- a/07-01.Dezember/content/auswertung.tex
+++ b/07-01.Dezember/content/auswertung.tex
@@ -38,11 +38,54 @@ Nach Formel ?? werden die theoretischen und praktischen Spannungswerte ausgerech
   \caption{$U_{\text{out}}$ bei verschiedenen Phasen.}
   \label{tab:Uphase}
 \end{table}
-Abbildung \ref{fig:Spannungsverlauf} kann man entnehmen das die Gemessene Spannung qualitativ erfüllt.
+Abbildung \ref{fig:Spannungsverlauf} kann man entnehmen das die Gemessene Spannung den Theoretischen Erwatungswert qualitativ erfüllt.
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{Spannungsverlauf.pdf}
   \caption{Spannungsverlauf}
   \label{fig:Spannungsverlauf}
 \end{figure}
+\subsection{Phasenabhängigkeit der Ausgangsspannung unter Einfluss einer Störfrequenz}
+Für diesen Versuchsteil wird der Noisgenerator eingeschaltet. Dieser mischt Störfrequenzen der Gleichen Amplitude bei und erzeugt somit ein Stark verrauschtes Signal. Der Bandpass filtert schon ein Großteil der Störfrequenzen raus. Nach dem Mischen mit der Referenzspannung und der anschließenden Integration durch den Tiefpass, ergibt sich wieder eine zeitlich Konstante Spannung, falls der Integrationszeitraum hinreichend groß gewählt wurde. Die des Aufbaus entnommene Messwerte werden analog zum vorherigen Aufgabenteil ausgewertet und die Spannungen werden in Tabelle \ref{tab:Uphase2} ausgegeben und in Grafik \ref{fig:Spannungsverlauf} gegen die Phasenverschiebung aufgetragen.
 
+\begin{table}
+    \centering
+    \begin{tabular}{c c c}
+    	\toprule
+    	$\phi$ & $U_{\text{theoretisch}} / 10^{-3} \cdot $ V & $U_{\text{praktisch}} / 10^{-3} \cdot $ V \\
+    	\midrule
+    	0   &  33.1  &  32.5        \\
+    	30  &  28.6  &  27.5        \\
+   	60  &  16.5  &  10.0       \\
+    	90  &  0.0   &   0.0        \\
+    	120 & -16.5  & -17.5        \\ 
+    	150 & -28.6  & -30.0        \\
+    	180 & -33.1  & -35.0        \\
+    	210 & -28.6  & -30.0        \\
+    	240 & -16.5  & -15.0        \\
+    	270 &  0.0   &  2.5         \\
+    	300 &  16.5  &  17.5        \\
+  	330 &  28.6  &  30.0        \\
+    	\end{tabular}
+    \caption{$U_{\text{out}}$ bei verschiedenen Phasen.}
+    \label{tab:Uphase2}
+\end{table}
+
+\begin{figure}
+  \centering
+  \includegraphics[height=5cm]{Spannungsverlauf2.pdf}
+  \caption{Spannungsverlauf}
+  \label{fig:Spannungsverlauf}
+\end{figure}
+
+\subsection{Signal-Abstandsrealtion einer LED}
+Aufgabe dieses Versuches ist die Signalstärke in Abhängigkeit des Abstandes zu messen. Der Lock-In-Verstärker dient dazu das durch die Umgebung verrauschte Signal zu filtern. Die LED wird mittels einer Rechteckspannung von 300 Hz betrieben. Durch justieren der Phasendifferenz soll die Spannung maximiert werden.Durch eine offset Messung, soll die Spannung der Photodiode vernachlässigt werden. Sie beträgt 
+\begin{equation}
+  U_{offset}= \frac{-1}{1000} \, Volt
+  \label{Uoffset}
+\end{equation}
+Die gemessenen Spannungen, deren Verstärkung und der Abstand sind in Tabelle ?? Aufgelistet. Dabei werden die gemessene Werte mit ihrer Verstärkung multipliziert und  die Offsetspannung von den Werten abgezogen.
+\begin{equation}
+  U_{\text{ber}} = \frac{U_{\text{out}}}{Gain} - \frac{U_{0}}{1000}
+  \label{Uber}
+\end{equation}
