--- a/07-01.Dezember/content/theorie.tex
+++ b/07-01.Dezember/content/theorie.tex
@@ -27,6 +27,7 @@ Die Rechteckspannung $U_\text{ref}$ wird mit einer Fourrierreihe genähert, die 
 hat. Nach dem multiplizieren von der Signalspannung mit der Rechteckspannung folgt, dass
 \begin{equation}
 	U_\text{sig} \times U_\text{ref} = \frac{2}{\pi} \left(1 - \frac{2}{3} \cos(2 \omega t) - \frac{2}{15} \cos(4 \omega t) - \frac{2}{35} \cos(6 \omega t) - ... \right)
+	\label{eqn:foye}
 \end{equation}
 ist. Das entspricht nun der geraden Oberwelle der Grundfrequenz $\omega_\text{0}$. Danach durchläuft die gerade Oberwelle den Tiefpassfilter und wird zu einer Gleichspannung, die proportional zur Signalspannung ist,
 \begin{equation}
