--- a/05-17.November/lit.bib
+++ b/05-17.November/lit.bib
@@ -1,5 +1,10 @@
-@manual{sample,
+@manual{M,
+  author = {GESTIS-Stoffdatenbank des BGIA},
+  title = {Eintrag zu Dichlordifluormethan},
+  year = 2015,
+}
+@manual{rho,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014
+  title = {Versuchsanleitung 206 Die Wärmepumpe},
+  year = 2015,
 }
