--- a/05-17.November/lit.bib
+++ b/05-17.November/lit.bib
@@ -3,7 +3,7 @@
   title = {Eintrag zu Dichlordifluormethan},
   year = 2015,
 }
-@manual{rho,
+@manual{Abb,
   author = {TU Dortmund},
   title = {Versuchsanleitung 206 Die Wärmepumpe},
   year = 2015,
